js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParam/main/f.7.kt
private inline fun prop() = "7"

internal inline fun foo(lambda: () -> String = ::prop): String {
    return lambda()
}
